# hdo-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  schemas.py
.github/workflows/: python-app.yml
src/cchdo/hdo_backend/: schemas.py
src/cchdo/hdo_backend/data/: iso-3166-3.json
src/cchdo/hdo_backend/tests/: conftest.py  test_api_cruise_schema.py  test_api_file_schema.py
src/cchdo/hdo_backend/tests/data/: cruise.json  file.json
