[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[project]
name = "cchdo.hdo-backend"
dynamic = ["version"]
dependencies = [
    "pydantic[email]",
]

[project.optional-dependencies]
selftest = [
    "pytest",
    "pytest-cov",
    "jsonpointer",
]
dev = [
    "cchdo.hdo-backend[selftest]",
    "ruff",
    "mypy",
    "pre-commit",
]
complete = [
    "cchdo.hdo-backend[dev]"
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true

[tool.ruff]
target-version = "py312"
extend-exclude = ["*.ipynb"]

[[tool.mypy.overrides]]
module = [
    "jsonpointer.*",
]
ignore_missing_imports = true

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let black worry about that
# E731: do not assign a lambda expression, use a def
ignore = [
    "E402",
    "E501",
    "E731",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # Pyupgrade
    "UP",
    # Tidy imports
    "TID",
]

[tool.ruff.lint.isort]
known-first-party = ["cchdo"]